ingress/banking-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking
  namespace: banking
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: sre-lab
spec:
  ingressClassName: alb
  rules:
    - host: banking.lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banking-frontend
                port:
                  number: 80
