ingress/food-delivery-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-delivery
  namespace: food-delivery
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: food-delivery.lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: food-delivery-frontend
                port:
                  number: 80
