ingress/student-portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-portal
  namespace: student-portal
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: student-portal.lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: student-portal-frontend
                port:
                  number: 80
