ingress/support-tickets-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: support-tickets
  namespace: support-tickets
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: support-tickets.lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: support-tickets-frontend
                port:
                  number: 80
